--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
-<header><title>This is title</title></header>
+<html>
 <body>
-Hello world
+<p><strong>Hello World</strong></p>
+<div> 
+<iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+</div>
+<div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d86104.99948632637!2d-122.40254847172999!3d47.591497056824814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906a9f505dc4db%3A0xc6f829b3a6a6fd95!2sSafeco+Field!5e0!3m2!1sen!2sus!4v1547079798185" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
 </body>
 </html>
